--- a/module-22-starter/package.json
+++ b/module-22-starter/package.json
@@ -18,6 +18,7 @@
     "if-env": "^1.0.4",
     "react": "^17.0.2",
     "react-redux": "^7.2.4",
+    "react-router-dom": "^5.2.0",
     "redux": "^4.1.0"
   },
   "devDependencies": {
